--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,22 +17,22 @@
         tools:targetApi="31">
         <activity
             android:name="com.example.foodmed.User.UserDashboard"
-            android:exported="false"
+            android:exported="true"
             android:theme="@style/Theme.FoodMedActionbar"
             />
         <activity
             android:name="com.example.foodmed.Admin.AdminDashboard"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/title_activity_admin_dashboard"
             android:theme="@style/Theme.FoodMedActionbar" />
         <activity
             android:name="com.example.foodmed.Signup"
             android:theme="@style/Theme.FoodMedActionbar"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name="com.example.foodmed.Login"
             android:theme="@style/Theme.FoodMedActionbar"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name="com.example.foodmed.Splash"
             android:exported="true"
@@ -43,9 +43,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.example.foodmed.MainActivity"
-            android:exported="false" />
+
     </application>
 
 </manifest>
